[project]
name = "surfboard-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "cachetools>=7.0.5",
  "httpx>=0.28",
  "prometheus-client>=0.24.1",
]

[dependency-groups]
dev = [
  "black>=26.3.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-watcher>=0.6.3",
  "respx>=0.22.0",
  "ruff>=0.15.8",
  "watchdog>=6.0.0",
]

[tool.pytest-watcher]
now = true
# clear = true
# notify_on_failure = false
# delay = 0.2
# runner = "pytest"
# runner_args = []
# patterns = ["*.py"]
# ignore_patterns = []
