[project]
name = "surfboard-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "cachetools>=7.0.5",
  "httpx>=0.28",
  "prometheus-client>=0.24.1",
]

[dependency-groups]
dev = [
  "black>=26.3.1",
  "ipython>=9.12.0",
  "isort>=8.0.1",
  "mimesis>=19.1.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-httpx>=0.36.0",
  "pytest-repeat>=0.9.4",
  "pytest-watcher>=0.6.3",
  "pytz>=2026.1.post1",
  "re-assert>=1.1.0",
  "ruff>=0.15.8",
  "time-machine>=3.2.0",
  "watchdog>=6.0.0",
]

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
# parser was a stdlib module removed in Python 3.12, but isort's static known_stdlib list still includes it
known_first_party = ["parser"]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

[tool.pytest-watcher]
now = true
# clear = true
# notify_on_failure = false
# delay = 0.2
# runner = "pytest"
# runner_args = []
patterns = [
  "*.py",
  "pyproject.toml", # updates to pytest/tool options
]
# ignore_patterns = []

[tool.ruff.lint]
select = ["B", "E", "I", "PT", "UP", "W"]
