[project]
name = "surfboard-exporter"
version = "0.1.0"
description = "Prometheus exporter for Arris SURFBoard SB8200 cable modems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "cachetools>=7.0.5",
  "httpx>=0.28",
  "prometheus-client>=0.24.1",
]

[project.scripts]
surfboard_exporter = "surfboard_exporter.__main__:main"

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "black>=26.3.1",
  "cryptography>=46.0.6",
  "faker>=40.13.0",
  "ipython>=9.12.0",
  "isort>=8.0.1",
  "polyfactory>=3.3.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "pytest-httpserver>=1.1.5",
  "pytest-httpx>=0.36.0",
  "pytest-repeat>=0.9.4",
  "pytest-watcher>=0.6.3",
  "pytz>=2026.1.post1",
  "re-assert>=1.1.0",
  "ruff>=0.15.8",
  "time-machine>=3.2.0",
  "watchdog>=6.0.0",
]

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
pythonpath = ["src"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["src"]

[tool.pytest-watcher]
now = true
# clear = true
# notify_on_failure = false
# delay = 0.2
# runner = "pytest"
# runner_args = []
patterns = [
  "*.py",
  "pyproject.toml", # updates to pytest/tool options
]
# ignore_patterns = []

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle (errors)
  "F",   # pyflakes
  "I",   # isort
  "LOG", # flake8-logging
  "N",   # pep8-naming
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "UP",  # pyupgrade
  "W",   # pycodestyle (warnings)
]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true
